# voice_clone

./: Cargo.toml  README.md  README_zh.md
extract_base_speaker_data_from_pth/: en-au.txt  en-br.txt  en-default.txt  en-india.txt  en-newest.txt  en-us.txt  es.txt  extract_base_speaker.py  fr.txt  jp.txt  kr.txt  zh.txt
extract_kaiser_filter_data_from_npz/: extract_data_from_npz.py  kaiser_best_rolloff.txt  kaiser_fast_half_window.txt  kaiser_fast_rolloff.txt
silero_vad/: README.md
src/: main.rs
src/api/: base_speaker.rs  config.rs  error.rs  mod.rs  parse_paras.rs  stft.rs  voice.rs
src/api/audio/: load_audio.rs  mod.rs  resample.rs
src/api/model/: generator.rs  mod.rs  open_voice_base.rs  posterior_encoder.rs  reference_encoder.rs  residual_coupling_block.rs  synthesizer.rs  tone_color_converter.rs  utils.rs
src/api/silero_vad/: mod.rs  silero.rs  vad_iter.rs  voice_activity_detector.rs
src/api/simple_vad/: energy_vad.rs  mod.rs  voice_activity_detector.rs
test_data/: README.md
